--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,32 +13,10 @@ dependencies {
     compile "com.android.support:multidex:1.0.1"
 }
 
-def gitSha() {
-    return 'git rev-parse --short HEAD'.execute().text.trim()
-//    try {
-//        String gitRev = 'git rev-parse --short HEAD'.execute(null, project.rootDir).text.trim()
-//        if (gitRev == null) {
-//            throw new GradleException("can't get git rev, you should add git to system path or just input test value, such as 'testTinkerId'")
-//        }
-//        return gitRev
-//    } catch (Exception e) {
-//        throw new GradleException("can't get git rev, you should add git to system path or just input test value, such as 'testTinkerId'")
-//    }
-}
-
-def javaVersion = JavaVersion.VERSION_1_7
 
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.3"
-    compileOptions {
-        sourceCompatibility javaVersion
-        targetCompatibility javaVersion
-    }
-    //recommend
-    dexOptions {
-        jumboMode = true
-    }
 
     signingConfigs {
         release {
@@ -60,36 +38,21 @@ android {
     defaultConfig {
         applicationId "com.cn21.tinkertest"
         minSdkVersion 10
-        targetSdkVersion 24
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
-        /**
-         * you can use multiDex and install it in your ApplicationLifeCycle implement
-         */
-        multiDexEnabled true
-        /**
-         * buildConfig can change during patch!
-         * we can use the newly value when patch
-         */
-        buildConfigField "String", "MESSAGE", "\"I am the base apk\""
-//        buildConfigField "String", "MESSAGE", "\"I am the patch apk\""
-        /**
-         * client version would update with patch
-         * so we can get the newly git version easily!
-         */
-        buildConfigField "String", "TINKER_ID", "\"${getTinkerIdValue()}\""
-        buildConfigField "String", "PLATFORM",  "\"all\""
+
     }
 
-    productFlavors {
-        qiho360 {
-            applicationId 'tinker.sample.android.qiho360'
-        }
-
-        qq {
-            applicationId 'tinker.sample.android.qq'
-        }
-    }
+//    productFlavors {
+//        qiho360 {
+//            applicationId 'tinker.sample.android.qiho360'
+//        }
+//
+//        qq {
+//            applicationId 'tinker.sample.android.qq'
+//        }
+//    }
 
     buildTypes {
         release {
@@ -111,324 +74,78 @@ android {
 
 }
 
-def bakPath = file("${buildDir}/bakApk/")
-
-/**
- * you can use assembleRelease to build you base apk
- * use tinkerPatchRelease -POLD_APK=  -PAPPLY_MAPPING=  -PAPPLY_RESOURCE= to build patch
- * add apk from the build/bakApk
- */
-ext {
-    //for some reason, you may want to ignore tinkerBuild, such as instant run debug build?
-    tinkerEnabled = true
-
-    //for normal build
-    //old apk file to build patch apk
-    tinkerOldApkPath = "${bakPath}/app-debug-1018-17-32-47.apk"
-    //proguard mapping file to build patch apk
-    tinkerApplyMappingPath = "${bakPath}/app-debug-1018-17-32-47-mapping.txt"
-    //resource R.txt to build patch apk, must input if there is resource changed
-    tinkerApplyResourcePath = "${bakPath}/app-debug-1018-17-32-47-R.txt"
-
-    //only use for build all flavor, if not, just ignore this field
-    tinkerBuildFlavorDirectory = "${bakPath}/app-0217-16-54-37"
-}
-
-
-def getOldApkPath() {
-    return hasProperty("OLD_APK") ? OLD_APK : ext.tinkerOldApkPath
-}
-
-def getApplyMappingPath() {
-    return hasProperty("APPLY_MAPPING") ? APPLY_MAPPING : ext.tinkerApplyMappingPath
-}
-
-def getApplyResourceMappingPath() {
-    return hasProperty("APPLY_RESOURCE") ? APPLY_RESOURCE : ext.tinkerApplyResourcePath
-}
-
-def getTinkerIdValue() {
-    return hasProperty("TINKER_ID") ? TINKER_ID : gitSha()
-}
-
-def buildWithTinker() {
-    return hasProperty("TINKER_ENABLE") ? TINKER_ENABLE : ext.tinkerEnabled
-}
-
-def getTinkerBuildFlavorDirectory() {
-    return ext.tinkerBuildFlavorDirectory
-}
-
-if (buildWithTinker()) {
-    apply plugin: 'com.tencent.tinker.patch'
-
-    tinkerPatch {
-        /**
-         * necessary，default 'null'
-         * the old apk path, use to diff with the new apk to build
-         * add apk from the build/bakApk
-         */
-        oldApk = "${bakPath}/app-debug-0217-12-29-20.apk"
-        /**
-         * optional，default 'false'
-         * there are some cases we may get some warnings
-         * if ignoreWarning is true, we would just assert the patch process
-         * case 1: minSdkVersion is below 14, but you are using dexMode with raw.
-         *         it must be crash when load.
-         * case 2: newly added Android Component in AndroidManifest.xml,
-         *         it must be crash when load.
-         * case 3: loader classes in dex.loader{} are not keep in the main dex,
-         *         it must be let tinker not work.
-         * case 4: loader classes in dex.loader{} changes,
-         *         loader classes is ues to load patch dex. it is useless to change them.
-         *         it won't crash, but these changes can't effect. you may ignore it
-         * case 5: resources.arsc has changed, but we don't use applyResourceMapping to build
-         */
-        ignoreWarning = true
-
-        /**
-         * optional，default 'true'
-         * whether sign the patch file
-         * if not, you must do yourself. otherwise it can't check success during the patch loading
-         * we will use the sign config with your build type
-         */
-        useSign = true
-
-        /**
-         * optional，default 'true'
-         * whether use tinker to build
-         */
-        tinkerEnable = buildWithTinker()
-
-        /**
-         * Warning, applyMapping will affect the normal android build!
-         */
-        buildConfig {
-            /**
-             * optional，default 'null'
-             * if we use tinkerPatch to build the patch apk, you'd better to apply the old
-             * apk mapping file if minifyEnabled is enable!
-             * Warning:
-             * you must be careful that it will affect the normal assemble build!
-             */
-            applyMapping = getApplyMappingPath()
-            /**
-             * optional，default 'null'
-             * It is nice to keep the resource id from R.txt file to reduce java changes
-             */
-            applyResourceMapping = getApplyResourceMappingPath()
-
-            /**
-             * necessary，default 'null'
-             * because we don't want to check the base apk with md5 in the runtime(it is slow)
-             * tinkerId is use to identify the unique base apk when the patch is tried to apply.
-             * we can use git rev, svn rev or simply versionCode.
-             * we will gen the tinkerId in your manifest automatic
-             */
-            tinkerId = "123456"
-
-            /**
-             * if keepDexApply is true, class in which dex refer to the old apk.
-             * open this can reduce the dex diff file size.
-             */
-            keepDexApply = false
-        }
-
-        dex {
-            /**
-             * optional，default 'jar'
-             * only can be 'raw' or 'jar'. for raw, we would keep its original format
-             * for jar, we would repack dexes with zip format.
-             * if you want to support below 14, you must use jar
-             * or you want to save rom or check quicker, you can use raw mode also
-             */
-            dexMode = "jar"
-
-            /**
-             * necessary，default '[]'
-             * what dexes in apk are expected to deal with tinkerPatch
-             * it support * or ? pattern.
-             */
-            pattern = ["classes*.dex",
-                       "assets/secondary-dex-?.jar"]
-            /**
-             * necessary，default '[]'
-             * Warning, it is very very important, loader classes can't change with patch.
-             * thus, they will be removed from patch dexes.
-             * you must put the following class into main dex.
-             * Simply, you should add your own application {@code tinker.sample.android.SampleApplication}
-             * own tinkerLoader, and the classes you use in them
-             *
-             */
-            loader = [
-                    //use sample, let BaseBuildInfo unchangeable with tinker
-                    "tinker.sample.android.app.BaseBuildInfo"
-            ]
-        }
-
-        lib {
-            /**
-             * optional，default '[]'
-             * what library in apk are expected to deal with tinkerPatch
-             * it support * or ? pattern.
-             * for library in assets, we would just recover them in the patch directory
-             * you can get them in TinkerLoadResult with Tinker
-             */
-            pattern = ["lib/*/*.so"]
-        }
-
-        res {
-            /**
-             * optional，default '[]'
-             * what resource in apk are expected to deal with tinkerPatch
-             * it support * or ? pattern.
-             * you must include all your resources in apk here,
-             * otherwise, they won't repack in the new apk resources.
-             */
-            pattern = ["res/*", "assets/*", "resources.arsc", "AndroidManifest.xml"]
-
-            /**
-             * optional，default '[]'
-             * the resource file exclude patterns, ignore add, delete or modify resource change
-             * it support * or ? pattern.
-             * Warning, we can only use for files no relative with resources.arsc
-             */
-            ignoreChange = ["assets/sample_meta.txt"]
-
-            /**
-             * default 100kb
-             * for modify resource, if it is larger than 'largeModSize'
-             * we would like to use bsdiff algorithm to reduce patch file size
-             */
-            largeModSize = 100
-        }
-
-        packageConfig {
-            /**
-             * optional，default 'TINKER_ID, TINKER_ID_VALUE' 'NEW_TINKER_ID, NEW_TINKER_ID_VALUE'
-             * package meta file gen. path is assets/package_meta.txt in patch file
-             * you can use securityCheck.getPackageProperties() in your ownPackageCheck method
-             * or TinkerLoadResult.getPackageConfigByName
-             * we will get the TINKER_ID from the old apk manifest for you automatic,
-             * other config files (such as patchMessage below)is not necessary
-             */
-            configField("patchMessage", "tinker is sample to use")
-            /**
-             * just a sample case, you can use such as sdkVersion, brand, channel...
-             * you can parse it in the SamplePatchListener.
-             * Then you can use patch conditional!
-             */
-            configField("platform", "all")
-            /**
-             * patch version via packageConfig
-             */
-            configField("patchVersion", "1.0")
-        }
-        //or you can add config filed outside, or get meta value from old apk
-        //project.tinkerPatch.packageConfig.configField("test1", project.tinkerPatch.packageConfig.getMetaDataFromOldApk("Test"))
-        //project.tinkerPatch.packageConfig.configField("test2", "sample")
-
-        /**
-         * if you don't use zipArtifact or path, we just use 7za to try
-         */
-        sevenZip {
-            /**
-             * optional，default '7za'
-             * the 7zip artifact path, it will use the right 7za with your platform
-             */
-            zipArtifact = "com.tencent.mm:SevenZip:1.1.10"
-            /**
-             * optional，default '7za'
-             * you can specify the 7za path yourself, it will overwrite the zipArtifact value
-             */
-//        path = "/usr/local/bin/7za"
-        }
+//全局信息相关的配置项
+tinkerPatch {
+    //有问题的apk的地址  准apk包的路径，必须输入，否则会报错
+    oldApk = "/Users/littlebyte/AndroidStudioProjects/TInkerTest/app/oldApk/app-debug.apk"
+    //
+    ignoreWarning = false
+    //在运行过程中，需要验证基准apk包与补丁包的签名是否一致，我们是否需要为你签名
+    useSign = true
+    //编译相关的配置项
+    buildConfig {
+        //在运行过程中，我们需要验证基准apk包的tinkerId是否等于补丁包的tinkerId。
+        // 这个是决定补丁包能运行在哪些基准包上面，一般来说我们可以使用git版本号、versionName等等。
+        tinkerId = "1.0"
     }
-
-    List<String> flavors = new ArrayList<>();
-    project.android.productFlavors.each {flavor ->
-        flavors.add(flavor.name)
-    }
-    boolean hasFlavors = flavors.size() > 0
-    /**
-     * bak apk and mapping
-     */
-    android.applicationVariants.all { variant ->
+    //用于生成补丁包中的'package_meta.txt'文件
+    packageConfig {
         /**
-         * task type, you want to bak
+         * optional，default 'TINKER_ID, TINKER_ID_VALUE' 'NEW_TINKER_ID, NEW_TINKER_ID_VALUE'
+         * package meta file gen. path is assets/package_meta.txt in patch file
+         * you can use securityCheck.getPackageProperties() in your ownPackageCheck method
+         * or TinkerLoadResult.getPackageConfigByName
+         * we will get the TINKER_ID from the old apk manifest for you automatic,
+         * other config files (such as patchMessage below)is not necessary
          */
-        def taskName = variant.name
-        def date = new Date().format("MMdd-HH-mm-ss")
-
-        tasks.all {
-            if ("assemble${taskName.capitalize()}".equalsIgnoreCase(it.name)) {
-
-                it.doLast {
-                    copy {
-                        def fileNamePrefix = "${project.name}-${variant.baseName}"
-                        def newFileNamePrefix = hasFlavors ? "${fileNamePrefix}" : "${fileNamePrefix}-${date}"
-
-                        def destPath = hasFlavors ? file("${bakPath}/${project.name}-${date}/${variant.flavorName}") : bakPath
-                        from variant.outputs.outputFile
-                        into destPath
-                        rename { String fileName ->
-                            fileName.replace("${fileNamePrefix}.apk", "${newFileNamePrefix}.apk")
-                        }
-
-                        from "${buildDir}/outputs/mapping/${variant.dirName}/mapping.txt"
-                        into destPath
-                        rename { String fileName ->
-                            fileName.replace("mapping.txt", "${newFileNamePrefix}-mapping.txt")
-                        }
-
-                        from "${buildDir}/intermediates/symbols/${variant.dirName}/R.txt"
-                        into destPath
-                        rename { String fileName ->
-                            fileName.replace("R.txt", "${newFileNamePrefix}-R.txt")
-                        }
-                    }
-                }
-            }
-        }
+        configField("patchMessage", "tinker is sample to use")
+        /**
+         * just a sample case, you can use such as sdkVersion, brand, channel...
+         * you can parse it in the SamplePatchListener.
+         * Then you can use patch conditional!
+         */
+        configField("platform", "all")
+        /**
+         * patch version via packageConfig
+         */
+        configField("patchVersion", "1.0")
     }
-    project.afterEvaluate {
-        //sample use for build all flavor for one time
-        if (hasFlavors) {
-            task(tinkerPatchAllFlavorRelease) {
-                group = 'tinker'
-                def originOldPath = getTinkerBuildFlavorDirectory()
-                for (String flavor : flavors) {
-                    def tinkerTask = tasks.getByName("tinkerPatch${flavor.capitalize()}Release")
-                    dependsOn tinkerTask
-                    def preAssembleTask = tasks.getByName("process${flavor.capitalize()}ReleaseManifest")
-                    preAssembleTask.doFirst {
-                        String flavorName = preAssembleTask.name.substring(7, 8).toLowerCase() + preAssembleTask.name.substring(8, preAssembleTask.name.length() - 15)
-                        project.tinkerPatch.oldApk = "${originOldPath}/${flavorName}/${project.name}-${flavorName}-release.apk"
-                        project.tinkerPatch.buildConfig.applyMapping = "${originOldPath}/${flavorName}/${project.name}-${flavorName}-release-mapping.txt"
-                        project.tinkerPatch.buildConfig.applyResourceMapping = "${originOldPath}/${flavorName}/${project.name}-${flavorName}-release-R.txt"
-
-                    }
-
-                }
-            }
-
-            task(tinkerPatchAllFlavorDebug) {
-                group = 'tinker'
-                def originOldPath = getTinkerBuildFlavorDirectory()
-                for (String flavor : flavors) {
-                    def tinkerTask = tasks.getByName("tinkerPatch${flavor.capitalize()}Debug")
-                    dependsOn tinkerTask
-                    def preAssembleTask = tasks.getByName("process${flavor.capitalize()}DebugManifest")
-                    preAssembleTask.doFirst {
-                        String flavorName = preAssembleTask.name.substring(7, 8).toLowerCase() + preAssembleTask.name.substring(8, preAssembleTask.name.length() - 13)
-                        project.tinkerPatch.oldApk = "${originOldPath}/${flavorName}/${project.name}-${flavorName}-debug.apk"
-                        project.tinkerPatch.buildConfig.applyMapping = "${originOldPath}/${flavorName}/${project.name}-${flavorName}-debug-mapping.txt"
-                        project.tinkerPatch.buildConfig.applyResourceMapping = "${originOldPath}/${flavorName}/${project.name}-${flavorName}-debug-R.txt"
-                    }
-
-                }
-            }
-        }
+    //dex相关的配置项
+    dex {
+        //只能是'raw'或者'jar'。
+        //对于'raw'模式，我们将会保持输入dex的格式。
+        //对于'jar'模式，我们将会把输入dex重新压缩封装到jar。
+        // 如果你的minSdkVersion小于14，你必须选择‘jar’模式，而且它更省存储空间，但是验证md5时比'raw'模式耗时()
+        dexMode = "jar"
+        //需要处理dex路径，支持*、?通配符，必须使用'/'分割。路径是相对安装包的，例如/assets/...
+        pattern = ["classes*.dex", "assets/secondary-dex-?.jar"]
+        //它定义了哪些类在加载补丁包的时候会用到。这些类是通过Tinker无法修改的类，也是一定要放在main dex的类。
+        loader = ["com.tencent.tinker.loader.*", "com.cn21.tinkertest.MyApplication"]
+        /**
+         * 这里需要定义的类有：
+         1. 你自己定义的Application类；
+         2. Tinker库中用于加载补丁包的部分类，即com.tencent.tinker.loader.*；
+         3. 如果你自定义了TinkerLoader，需要将它以及它引用的所有类也加入loader中；
+         4. 其他一些你不希望被更改的类，例如Sample中的BaseBuildInfo类。这里需要注意的是，
+         这些类的直接引用类也需要加入到loader中。或者你需要将这个类变成非preverify。
+         */
+    }
+    //lib相关的配置项
+    lib {
+        //需要处理lib路径，支持*、?通配符，必须使用'/'分割。与dex.pattern一致, 路径是相对安装包的，例如/assets/...
+        pattern = ["lib/armeabi/*.so", "lib/arm64-v8a/*.so", "lib/armeabi-v7a/*.so", "lib/mips/*.so", "lib/mips64/*.so", "lib/x86/*.so", "lib/x86_64/*.so"]
+    }
+    //res相关的配置项
+    res {
+        pattern = ["res/*", "assets/*", "resources.arsc", "AndroidManifest.xml"]
+        //对于修改的资源，如果大于largeModSize，我们将使用bsdiff算法。
+        // 这可以降低补丁包的大小，但是会增加合成时的复杂度。默认大小为100kb
+        largeModSize = 100
+    }
+    //7zip路径配置项，执行前提是useSign为true
+    sevenZip {
+        //例如"com.tencent.mm:SevenZip:1.1.10"，将自动根据机器属性获得对应的7za运行文件，推荐使用。
+        zipArtifact = "com.tencent.mm:SevenZip:1.1.10"
     }
 }
 
